# anchorage

./: .gitignore  Cargo.toml  README.md  flake.nix
data/: io.matv.Anchorage.desktop  io.matv.Anchorage.gschema.xml  io.matv.Anchorage.metainfo.xml
src/: api.rs  app.rs  config.rs  main.rs  runtime.rs
src/ui/: add_sheet.rs  list.rs  mod.rs  models.rs  onboarding.rs  row.rs  tags.rs
